# HermesOS

./: .gitignore  CMakeLists.txt  README.md
assets/: compile_pci_ids.py
assets/root_dir/boot/grub/: grub.cfg
buildtools/: INSTALLBUILDTOOLS.md  create_image.bat  create_image.sh  create_image_windows.sh  install-buildtools-linux.sh  install-buildtools-windows.bat  install-buildtools-windows.ps1  install-grub-windows.sh  run.bat  run.sh  toolchain.cmake
externaltools/: install-external-tools.sh
include/kernel/: syscall.h  types.h
include/os/: posix_types.h  stdarg.h  stdbool.h  stddef.h  stdint.h  types.h
include/uapi/linux/: fcntl.h  stat.h
kernel/: CMakeLists.txt  bootblock.S  kernelcore.S  main.c
kernel/cfunctions/: kobject.c  kobject.h
kernel/cfunctions/hash/: hash_set.c
kernel/cfunctions/io/: printf.c
kernel/cfunctions/memory/: kmalloc.c  memorylayout.h
kernel/cfunctions/page/: page.c  pagetable.c
kernel/cfunctions/pipe/: pipe.c
kernel/cfunctions/string/: string.c  string.h
kernel/cfunctions/threading/: mutex.c  mutex.h
kernel/cfunctions/time/: clock.c  rtc.c
kernel/checks/: is_valid.c  is_valid.h
kernel/event/: event.c  event_queue.c
kernel/graphics/: bitmap.c
kernel/graphics/window/: window.c
kernel/hardware/: device.c  ioports.h
kernel/hardware/drives/: ata.c  bcache.c  bcache.h  diskfs.c  fs.c  fs.h  fs_internal.h
kernel/hardware/drives/fat/: fatfs.c
kernel/hardware/drives/fat/lib/: ff.c
kernel/hardware/drives/iso9660/: cdromfs.c
kernel/hardware/interrupt/: pic.c
kernel/hardware/keyboard/: keyboard.c
kernel/hardware/mouse/: mouse.c
kernel/interrupt/: interrupt.c
kernel/runtime/: elf.c  elf.h  process.c  process.h
kernel/syscall/: syscall_handler.c  syscall_handler.h
kernel/terminal/: console.c  console.h  kshell.c
src/: CMakeLists.txt  linker.ld
src/arch/: CMakeLists.txt
src/arch/x86_64/: CMakeLists.txt  linker.ld  long_mode_init.asm  multiboot_header.asm  start.asm
src/kernel/: CMakeLists.txt  main.c  main.h  multiboot.c  multiboot.h  start.c
src/kernel/cfunctions/: kobject.c  kobject.h
src/kernel/cfunctions/memory/: kmalloc.c  memorylayout.h
src/kernel/cfunctions/page/: page.c  page.h  pagetable.c  pagetable.h
src/kernel/cfunctions/pipe/: pipe.c
src/kernel/cfunctions/string/: string.c
src/kernel/cfunctions/threading/: mutex.c
src/kernel/cfunctions/time/: clock.c  rtc.c
src/kernel/drivers/: drivers.h
src/kernel/drivers/elf/: ELF.c  ELF.h
src/kernel/drivers/filesystems/: fs.c  fs.h
src/kernel/drivers/filesystems/fat/: fat32.c  fat32.h
src/kernel/drivers/fs/: fs.c  fs.h  fs_utils.h
src/kernel/drivers/fs/fat/: fat32.c  fat32.h
src/kernel/drivers/fs/notify/: fsnotify.h
src/kernel/drivers/fs/vfs/: vfs.c  vfs.h  vfs_type.h  vfs_utils.c  vfs_utils.h
src/kernel/drivers/keyboard/: keycodes.h  ps2_keyboard.c  ps2_keyboard.h
src/kernel/drivers/ps2/: codes.h  keyboard.c  keyboard.h
src/kernel/drivers/syscalls/: syscalls.c  syscalls.h
src/kernel/drivers/terminal/: terminal.c  terminal.h
src/kernel/drivers/terminal/procs/: lfb.c  lfb.h  vga.c  vga.h
src/kernel/drivers/timer/: pit.c  pit.h  rtc.c  rtc.h
src/kernel/drivers/video/: LFB.c  LFB.h
src/kernel/drivers/video/bochs/: bochs.c  bochs.h
src/kernel/event/: event.c  event_queue.c  event_queue.h
src/kernel/graphics/: bitmap.c  graphics.c
src/kernel/graphics/window/: window.h
src/kernel/hardware/: device.c  ioports.h
src/kernel/hardware/disks/: ata.c  ata.h  disk.h  partition_table.h
src/kernel/hardware/drives/: ata.c  ata.h  fs.c  fs_internal.h
src/kernel/hardware/drives/fat/: fatfs.c  fatfs.h
src/kernel/hardware/drives/fat/lib/: diskio.c  diskio.h  ff.h  ffconf.h
src/kernel/hardware/drives/iso9660/: cdromfs.c
src/kernel/hardware/interrupt/: pic.c
src/kernel/hardware/interrupts/: interrupt.asm  interrupts.c  interrupts.h  panic.c  panic.h  pic.c  pic.h
src/kernel/hardware/io_ports/: pci.c  pci.h  pci_ids.h  ports.c  ports.h
src/kernel/hardware/keyboard/: keyboard.c
src/kernel/hardware/memory/: alloc.c  alloc.h  mmu.c  mmu.h  pmm.c  pmm.h
src/kernel/hardware/mouse/: mouse.c
src/kernel/hardware/port/: pci.c  pci.h  pci_ids.h  ports.c  ports.h
src/kernel/hardware/serial/: serial.c
src/kernel/hardware/terminal/: stdio.c  stdio.h  terminal.h
src/kernel/hardware/terminal/procs/: vga.c  vga.h
src/kernel/hardware/vga/: vga.c  vga.h
src/kernel/interrupt/: interrupt.c
src/kernel/io/: printf.c
src/kernel/io/terminal/: console.c  console.h  kshell.c
src/kernel/runtime/: process.c  process.h
src/kernel/syscall/: syscall_handler.c
src/kernel/utils/int/: int.h
src/kernel/utils/list/: list.c  list.h
src/kernel/utils/str/: str.h  vsnprintf.c  vsnprintf.h
src/kernel/utils/vector/: vector.h
src/kernel/x86/: x86.h
toolchain/: x86_64-elf.cmake
tools/: config  glibcextract.py  glibcsyscalls.py  syscall-list.py  update-syscall-lists.py
user/: CMakeLists.txt  manager.c
